add the first two buttons

--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,11 @@
     <!-- div element for positioning the map -->
     <div id="map"></div>
 
-    <!-- <button id="overview" onclick="overview()">Overview</button> -->
+    <button id="overview" onclick="overview()">Overview</button>
+    <button id="syntagma">Syntagma Square</button>
 
-    <button id="syntagma" onclick="goto()">Syntagma Square</button>
+
+    
     <!-- Linking the javascript file to the html document -->
     <script src="code.js"></script>
 </body>
